Specify generator whenever there's no CMakeCache.txt

BUG: 349877